--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "fart",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "pthhhhhht",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/D-TUCKER/fart"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
