--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/D-TUCKER/fart"
   },
   "main": "index.js",
+  "module": "module.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
